# -Student-course-selection-system

./: CMakeLists.txt  README.md  main.cpp  student.cpp  student.h  system.cpp  system.h  teacher.cpp  teacher.h
Student-course-selection-system/: CMakeLists.txt  course.h  main.cpp  system.h
deploy/: install.sh  student_course_system.desktop
doc/: project_description.txt
src/: course.cpp  course.h  main.cpp  student.h  system.cpp  system.h
